--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,14 @@
 layout: page
 title: Blog
 ---
+
+<h1 style="text-align: center;">Under Development</h1>
+
+
+
+
+<!-- 
+
 <div class="section-container">
     <div class="container">
         <div class="row resume-row-label">
@@ -12,7 +20,18 @@ title: Blog
             </div>
         </div>
     </div>
-    <div class="container posts">
+    <div class="container posts"> -->
+
+
+
+
+
+
+
+
+
+
+
         <!-- {% for post in site.posts %}
         <div class="row">
             <div class="col-xs-12">
@@ -24,6 +43,13 @@ title: Blog
         </div>
 
         {% endfor %} -->
+
+
+
+
+
+
+<!--         
         <ul>
             {% for post in site.posts %}
             <li>
@@ -33,4 +59,4 @@ title: Blog
             {% endfor %}
         </ul>
     </div>
-</div>
+</div> -->
