--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Kylie Ying
+title: Faysal Mahmud
 ---
 
 <div class="hero-full-container background-image-container white-text-container"
@@ -12,10 +12,10 @@ title: Kylie Ying
 					<div class="text-content">
 						<h1>Hello, I am <br>
 							<span id="typed-strings">
-								<span>Kylie Ying</span>
-								<span>an engineer and scientist</span>
-								<span>a content creator</span>
-								<span>a figure skater, hockey player, dog lover, sunset enthusiast</span>
+								<span>Faysal Mahmud</span>
+								<span>an engineer</span>
+								<span>monochrome artist</span>
+								<span>a football player,<br> nature lover,<br> sunset enthusiast</span>
 							</span>
 							<span id="typed"></span>
 						</h1>
@@ -33,20 +33,20 @@ title: Kylie Ying
 			<div class="template-example">
 				<h2 class="template-title-example">Hi there!</h2>
 				<p>
-					My name is Kylie Ying. I am currently working on drone delivery, and I am passionate about AI, ML, and robotics.
-					I graduated from MIT (BS and MEng) and previously, I have worked on web3 and high-energy physics research.
+					My name is Faysal Mahmud. I am currently working on Acoustic Image Reconstruction, and I am passionate about AI, ML, and robotics.
+					I graduated from Daffodil International University (BSc), I have worked on Backend Development, API design, Image recognize.
 				</p>
 				<p>
 					Currently, I am:
 					<ul>
 						<li>
-							Working on perception algorithms for autonomous delivery drones with Alphabet
+							Acoustic Image Reconstruction
 						</li>
 						<li>
-							Building a sunset social media app
+							Building a smart attendance platform system
 						</li>
 						<li>
-							Teaching introductory programming concepts on YouTube
+							Making python library on ssd1306 OLED display
 						</li>
 					</ul>
 				</p>
@@ -58,22 +58,27 @@ title: Kylie Ying
 				<ul class="list-icons">
 					<li>
 						<span class="fa-icon">
-							<a href="https://www.youtube.com/channel/UCKMjvg6fB6WS5WrPtbV4F5g"><i
+							<a href="https://www.youtube.com/@faysalmahmud7248"><i
 									class="fa fa-youtube-play"></i></a>
 						</span>
 					</li>
 					<li>
 						<span class="fa-icon">
-							<a href="https://github.com/kying18"><i class="fa fa-github"></i></a>
+							<a href="https://github.com/FaysalMahmudSajan"><i class="fa fa-github"></i></a>
 						</span>
 					</li>
 					<li>
 						<span class="fa-icon">
-							<a href="https://instagram.com/kylieyying"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/faysal_mahmud_sajen"><i class="fa fa-instagram"></i></a>
+						</span>
+					</li>
+					<li>
+						<span class="fa-icon">
+							<a href="https://www.instagram.com"><i class="fa fa-linkedin"></i></a>
 						</span>
 					</li>
 				</ul>
-				<span class="fa-icon"><i class="fa fa-envelope"></i></span><span>&nbsp; me@[firstname][lastname].com</span>
+				<span class="fa-icon"><i class="fa fa-envelope"></i></span><span>&nbsp; faysalmahmud4300@gmail.com</span>
 			</div>
 		</div>
 	</div>
