--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,9 @@
 layout: page
 title: Resume
 ---
+<h1 style="text-align: center;">Under Development</h1>
+
+<!-- 
 <div class="section-container">
     <div class="container">
         <div class="row resume-row-label">
@@ -155,4 +158,4 @@ title: Resume
             </div>
         </div>
     </div>
-</div>
+</div> -->
