--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ title: Faysal Mahmud
 					</li>
 					<li>
 						<span class="fa-icon">
-							<a href="https://www.instagram.com"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/faysalmahmudsajan/"><i class="fa fa-linkedin"></i></a>
 						</span>
 					</li>
 				</ul>
