--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Faysal Mahmud
 					Currently, I am:
 					<ul>
 						<li>
-							Acoustic Image Reconstruction
+							Working on Acoustic Image Reconstruction
 						</li>
 						<li>
 							Building a smart attendance platform system
